--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ body {
   align-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-image: url("https://images.unsplash.com/photo-1667312950895-306784936a68?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
+  background: #f0f1f3;
+  background-image: url("https://source.unsplash.com/random");
   background-size: cover;
 }
